Fixed booking form
inserito dello spazio tra i campi del form e riposizionamento centrale
del bottone di prenotazione

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                                             <option value="13">Sydney</option>
                                         </optgroup>
                                     </select>
+                                    <br>
                                 </div>
                             </div>
-
                             <!-- Selezione adulti -->
                             <div class="form-group">
                                 <label class="col-md-3 control-label" for="selectbasic">Numero adulti:</label>
@@ -156,6 +156,7 @@
                                         <option value="4">4</option>
                                         <option value="5">4+</option>
                                     </select>
+                                    <br>
                                 </div>
                             </div>
 
@@ -170,6 +171,7 @@
                                         <option value="4">3</option>
                                         <option value="5">3+</option>
                                     </select>
+                                    <br>
                                 </div>
                             </div>
 
@@ -185,6 +187,7 @@
                                         <option value="5">Appartamento</option>
                                         <option value="6">Casa</option>
                                     </select>
+                                    <br>
                                 </div>
                             </div>
 
@@ -214,9 +217,9 @@
                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                 </div>
                             </div>
-                            <br>
-                            <a class="btn btn-info pull-right" href="/viaggi/acquisto-viaggio.html" role="button">Prenota subito</a>
                         </fieldset>
+                            <br>
+                            <div align="center"><a class="btn btn-info" href="/viaggi/acquisto-viaggio.html" role="button">Prenota subito</a></div>
                     </form>
                 </div>
                 <!-- end Row -->
