--- a/navbar.html
+++ b/navbar.html
@@ -33,13 +33,13 @@
 
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Viaggi<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="/viaggi/europa.html"><i class="mg map-glb-eu mg-fw"></i>&nbsp; Europe</a>
+                        <li><a href="/viaggi/africa.html"><i class="mg map-glb-af mg-fw"></i>&nbsp; Africa</a>
                         </li>
                         <li><a href="/viaggi/america.html"><i class="mg map-glb-am mg-fw"></i>&nbsp; America</a>
                         </li>
                         <li><a href="/viaggi/asia.html"><i class="mg map-glb-as mg-fw"></i>&nbsp; Asia</a>
                         </li>
-                        <li><a href="/viaggi/africa.html"><i class="mg map-glb-af mg-fw"></i>&nbsp; Africa</a>
+                        <li><a href="/viaggi/europa.html"><i class="mg map-glb-eu mg-fw"></i>&nbsp; Europa</a>
                         </li>
                         <li><a href="/viaggi/oceania.html"><i class="mg map-glb-oc mg-fw"></i>&nbsp; Oceania</a>
                         </li>
