--- a/navbar_conparigi.html
+++ b/navbar_conparigi.html
@@ -65,7 +65,7 @@
                     </ul>
                 </li>
 
-                <li><a href="#">Recensioni</a>
+                <li><a href="/recensioni-utenti.html♦">Recensioni</a>
                 </li>
 
                 <li><a href="/blog.html">Blog</a>
