Hotfix e sistemazioni riferimenti
completamento della sezione recensioni ed aggiornamento dei riferimenti
in varie pagine

--- a/acquisti_conparigi.html
+++ b/acquisti_conparigi.html
@@ -69,7 +69,7 @@
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
                         <a href="acquisti.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="recensioni_paginaprofilo.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
@@ -111,7 +111,7 @@
                                 <hr/>
                                 <a class="btn btn-warning" href="/fattura_404-2941210-0056455.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
-                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Scrivi una recensione</a>
+                                <a class="btn btn-default" href="/recensioni_paginaprofilo_conparigi.html" role="button">Scrivi una recensione</a>
                             </div>
 
                         </div>
@@ -142,7 +142,7 @@
                                 <hr/>
                                 <a class="btn btn-warning" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
-                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica la recensione</a>
+                                <a class="btn btn-default" href="/recensioni_paginaprofilo_conparigi.html" role="button">Modifica la recensione</a>
                             </div>
 
                         </div>
