--- a/recensioni_paginaprofilo_conparigiaggiunta.html
+++ b/recensioni_paginaprofilo_conparigiaggiunta.html
@@ -69,7 +69,7 @@
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
                         <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="recensioni_paginaprofilo.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
@@ -99,8 +99,8 @@
                             <div class="purchase-item-details">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 <div>
-                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica</a>
-                                <a class="btn btn-warning" href="/recensioni.html" role="button">Rimuovi</a>
+                                <a class="btn btn-default" href="/recensioni_paginaprofilo_conparigi.html" role="button">Modifica</a>
+                                <a class="btn btn-warning" href="/recensioni_paginaprofilo.html" role="button">Rimuovi</a>
                                 </div>
 
                             </div>
