--- a/ricerca.html
+++ b/ricerca.html
@@ -106,7 +106,7 @@
                 <div class="row col-lg-12 search-result">
                     <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina della recensione" src="img/maldive200x200.jpg">
                     <div class="purchase-item-details">
-                        <a href="/recensioni_notlogged.html"><h4>Recensioni - Maldive</h4></a>
+                        <a href="/recensioni_20140730-1_maldive.html"><h4>Recensioni - Maldive</h4></a>
                         <p>... io e la mia famiglia abbiamo partecipato a quasi tutte le
                             <mark>escursioni</mark> e ci siamo divertiti tantissimo!! Ce n'è veramente per tutti i gusti! Ai bambini è piacuta soprattutto la pesca notturna dalle barche, dove ...</p>
                     </div>
