--- a/navbar_conparigi.html
+++ b/navbar_conparigi.html
@@ -54,9 +54,9 @@
                         </li>
                         <li><a href="/business.html"><i class="fa fa-line-chart"></i>&nbsp; Business</a>
                         </li>
-                        <li><a href="/tos.html"><i class="md md-info-outline"></i>&nbsp; Termini e Condizioni</a>
-                        </li>
                         <li><a href="/sicurezza.html"><i class="md md-vpn-lock"></i>&nbsp; Sicurezza &amp; Privacy</a>
+                        </li>
+                        <li><a href="/tos.html"><i class="md md-info-outline"></i>&nbsp; Termini e Condizioni</a>
                         </li>
                         <li><a href="/contatti.html"><i class="md md-email"></i>&nbsp; Contattaci</a>
                         </li>
@@ -65,7 +65,7 @@
                     </ul>
                 </li>
 
-                <li><a href="/recensioni-utenti.html♦">Recensioni</a>
+                <li><a href="/recensioni.html">Recensioni</a>
                 </li>
 
                 <li><a href="/blog.html">Blog</a>
