--- a/recensioni.html
+++ b/recensioni.html
@@ -50,8 +50,7 @@
                     <ol class="breadcrumb" id="path">
                         <li><a href="index.html">Home</a>
                         </li>
-                        <li>Area Personale</li>
-                        <li class="active">Le mie recensioni</li>
+                        <li class="active">Recensioni</li>
                     </ol>
                 </div>
             </div>
@@ -60,31 +59,16 @@
 
             <div class="row">
 
-                <div class="col-md-3">
-
-                    <!-- SIDE MENU -->
-
-                    <div class="list-group">
-                        <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
-                    </div>
-
-                </div>
-
                 <!-- SECTION CONTENT -->
 
-                <div class="col-md-9">
+                <div class="col-md-12">
                     
                     <!-- MALDIVE -->
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h4>Maldive</h4>
+                                <a href="/recensioni_20140730-1_maldive.html"><h4>Maldive</h4></a>
                             </div>
                             <div class="header-center">
                             </div>
@@ -105,13 +89,32 @@
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
                                 </div>
-                                <hr />
-                                <div>
-                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica</a>
-                                <a class="btn btn-warning" href="/recensioni_vuoto.html" role="button">Rimuovi</a>
-                                </div>
                             </div>
 
+                        </div>
+                    </div>
+                    
+                    <!-- NORVEGIA -->
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <a href="/recensioni_20140620-1_norvegia.html"><h4>Norvegia</h4></a>
+                            </div>
+                            <div class="header-center">
+                            </div>
+                            <div class="pull-right">
+                                <h4>20-06-2014</h4>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="img/norvegia550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                            <div class="purchase-item-details">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <hr style="margin-bottom: 5px;" />
+                            </div>
                         </div>
                     </div>
 
