--- a/recensioni_20140730-1_maldive.html
+++ b/recensioni_20140730-1_maldive.html
@@ -50,8 +50,8 @@
                     <ol class="breadcrumb" id="path">
                         <li><a href="index.html">Home</a>
                         </li>
-                        <li>Area Personale</li>
-                        <li class="active">Le mie recensioni</li>
+                        <li><a href="/recensioni.html">Recensioni</a></li>
+                        <li class="active">Maldive</li>
                     </ol>
                 </div>
             </div>
@@ -60,60 +60,9 @@
 
             <div class="row">
 
-                <div class="col-md-3">
-
-                    <!-- SIDE MENU -->
-
-                    <div class="list-group">
-                        <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
-                    </div>
-
-                </div>
-
                 <!-- SECTION CONTENT -->
 
-                <div class="col-md-9">
-
-
-                    <!-- PARIGI -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Parigi</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <img src="img/parigi550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <form>
-                                    <div class="form-group">
-                                        <textarea class="form-control" rows="6" placeholder="Com'è stata la tua vacanza?"></textarea>
-                                    </div>
-                                    <div>
-                                    <form action="demo_form.asp">
-                                        Aggiungi foto<input type="file" name="Image"><br>
-                                        <a class="btn btn-default" href="#" role="button">Carica foto</a>
-                                    </form>
-                                    <br><br>
-                                    <a class="btn btn-warning" href="/recensioni_conparigiaggiunta.html" role="button">Pubblica</a>
-                                    </div>
-                                </form>
-                            </div>
-
-                        </div>
-                    </div>
+                <div class="col-md-12">
                     
                     <!-- MALDIVE -->
 
@@ -140,12 +89,6 @@
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_2.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
-                                </div>
-                                <hr />
-                                <div>
-                                <a class="btn btn-default" href="#" role="button">Modifica</a>
-                                <a class="btn btn-warning" href="#" role="button">Rimuovi</a>
-                                <p><em>( pulsanti disabilitati )</em></p>
                                 </div>
                             </div>
 
