--- a/recensioni_paginaprofilo.html
+++ b/recensioni_paginaprofilo.html
@@ -50,8 +50,8 @@
                     <ol class="breadcrumb" id="path">
                         <li><a href="index.html">Home</a>
                         </li>
-                        <li><a href="/ricerca.html">Ricerca</a></li>
-                        <li class="active">Recensioni</li>
+                        <li>Area Personale</li>
+                        <li class="active">Le mie recensioni</li>
                     </ol>
                 </div>
             </div>
@@ -60,9 +60,24 @@
 
             <div class="row">
 
+                <div class="col-md-3">
+
+                    <!-- SIDE MENU -->
+
+                    <div class="list-group">
+                        <span class="list-group-item list-group-item-default">Area personale</span>
+                        <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
+                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="recensioni_paginaprofilo.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                    </div>
+
+                </div>
+
                 <!-- SECTION CONTENT -->
 
-                <div class="col-md-12">
+                <div class="col-md-9">
                     
                     <!-- MALDIVE -->
 
@@ -89,6 +104,11 @@
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_2.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
+                                </div>
+                                <hr />
+                                <div>
+                                <a class="btn btn-default" href="/recensioni_paginaprofilo_conparigi.html" role="button">Modifica</a>
+                                <a class="btn btn-warning" href="/recensioni_paginaprofilo_vuota.html" role="button">Rimuovi</a>
                                 </div>
                             </div>
 
