--- a/recensioni_paginaprofilo_conparigi.html
+++ b/recensioni_paginaprofilo_conparigi.html
@@ -51,7 +51,7 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">Carrello</li>
+                        <li class="active">Le mie recensioni</li>
                     </ol>
                 </div>
             </div>
@@ -67,9 +67,9 @@
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
+                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
                         <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni_paginaprofilo.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="recensioni_paginaprofilo.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
@@ -78,6 +78,7 @@
                 <!-- SECTION CONTENT -->
 
                 <div class="col-md-9">
+
 
                     <!-- PARIGI -->
 
@@ -89,80 +90,65 @@
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <h4>dal 11-07-2015 al 21-07-2015</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/parigi550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/parigi550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>2 adulti</p>
-                                <p>Totale: EUR 1.700,00</p>
-                                <hr/>
-                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio_riepilogo.html" role="button">Riepilogo</a>
-                                <a class="btn btn-warning" href="/viaggi/acquisto-viaggio.html" role="button">Acquista</a>
-                                <a class="btn btn-default" href="/carrello.html" role="button">Rimuovi</a>
+                                <form>
+                                    <div class="form-group">
+                                        <textarea class="form-control" rows="6" placeholder="Com'è stata la tua vacanza?"></textarea>
+                                    </div>
+                                    <div>
+                                    <form action="demo_form.asp">
+                                        Aggiungi foto<input type="file" name="Image"><br>
+                                        <a class="btn btn-default" href="#" role="button">Carica foto</a>
+                                    </form>
+                                    <br><br>
+                                    <a class="btn btn-warning" href="/recensioni_paginaprofilo_conparigiaggiunta.html" role="button">Pubblica</a>
+                                    </div>
+                                </form>
                             </div>
 
                         </div>
                     </div>
-
-                    <!-- ISOLE FIJI -->
+                    
+                    <!-- MALDIVE -->
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h4>Isole Fiji</h4>
+                                <h4>Maldive</h4>
                             </div>
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <h4>dal 11-07-2015 al 21-07-2015</h4>
+                                <h4>30-07-2014</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/isolefiji550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/maldive550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <div class="alert alert-warning" role="alert">
-                                    <i class="fa fa-exclamation-triangle"></i>
-                                    <span class="sr-only">Error:</span> Questo articolo ha subito una variazione di prezzo
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <hr style="margin-bottom: 5px;" />
+                                <div>
+                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_1.png" />
+                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_2.png" />
+                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
+                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
                                 </div>
-                                <hr/>
-                                <p>2 adulti - 2 bambini</p>
-                                <p>Totale: EUR 3.400,00
-                                </p>
-                                <hr/>
-                                <a class="btn btn-default" href="#" role="button">Riepilogo</a>
-                                <a class="btn btn-warning" href="#" role="button">Acquista</a>
-                                <a class="btn btn-default" href="#" role="button">Rimuovi</a>
+                                <hr />
+                                <div>
+                                <a class="btn btn-default" href="#" role="button">Modifica</a>
+                                <a class="btn btn-warning" href="#" role="button">Rimuovi</a>
                                 <p><em>( pulsanti disabilitati )</em></p>
+                                </div>
                             </div>
 
-                        </div>
-                    </div>
-
-                    <!-- ACQUISTA TUTTO -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Totale</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <p>2 Viaggi</p>
-                            <p>Totale: EUR 5.100,00</p>
-                            <hr/>
-
-                            <a class="btn btn-warning pull-right" href="/carrello_vuoto.html" role="button">Svuota carrello</a>
                         </div>
                     </div>
 
@@ -181,11 +167,10 @@
 
     <script src="js/bootstrap.min.js"></script>
     <!-- <script src="js/docs.min.js"></script> -->
-
     <!-- scripts parts -->
 
     <script>
-        $("#navbar").load("navbar_conparigi.html");
+        $("#navbar").load("navbar.html");
     </script>
     <script>
         $("#footer").load("footer.html");
