--- a/recensioni_paginaprofilo_vuota.html
+++ b/recensioni_paginaprofilo_vuota.html
@@ -51,7 +51,7 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">Carrello</li>
+                        <li class="active">Le mie recensioni</li>
                     </ol>
                 </div>
             </div>
@@ -67,9 +67,9 @@
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i> Carrello</a>
+                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
                         <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni_paginaprofilo.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="recensioni_paginaprofilo.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
@@ -78,10 +78,10 @@
                 <!-- SECTION CONTENT -->
 
                 <div class="col-md-9">
-
+                    
                     <div class="alert alert-info" role="alert">
                         <i class="fa fa-info-circle"></i>
-                        <span class="sr-only">Error:</span> Non ci sono prenotazioni!
+                        <span class="sr-only">Error:</span> Nessuna recensione presente!
                     </div>
 
                 </div>
@@ -99,11 +99,10 @@
 
     <script src="js/bootstrap.min.js"></script>
     <!-- <script src="js/docs.min.js"></script> -->
-
     <!-- scripts parts -->
 
     <script>
-        $("#navbar").load("navbar_carrellovuoto.html");
+        $("#navbar").load("navbar.html");
     </script>
     <script>
         $("#footer").load("footer.html");
