--- a/recensioni.html
+++ b/recensioni.html
@@ -68,7 +68,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <a href="/recensioni_20140730-1_maldive.html"><h4>Maldive</h4></a>
+                                <h4>Maldive</h4>
                             </div>
                             <div class="header-center">
                             </div>
@@ -81,14 +81,9 @@
                             <img src="img/maldive550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
+                                <p><a class="btn btn-default" href="/recensioni_20140730-1_maldive.html" role="button">Leggi tutto</a></p>
                                 <hr style="margin-bottom: 5px;" />
-                                <div>
-                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_1.png" />
-                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_2.png" />
-                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
-                                    <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
-                                </div>
                             </div>
 
                         </div>
@@ -99,7 +94,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <a href="/recensioni_20140620-1_norvegia.html"><h4>Norvegia</h4></a>
+                                <h4>Norvegia</h4>
                             </div>
                             <div class="header-center">
                             </div>
@@ -112,7 +107,8 @@
                             <img src="img/norvegia550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
+                                <p><a class="btn btn-default" href="/recensioni_20140620-1_norvegia.html" role="button">Leggi tutto</a></p>
                                 <hr style="margin-bottom: 5px;" />
                             </div>
                         </div>
