Aggiunte linee di separazione
aggiunte linee di separazione in tutte le visualizzazioni eccetto
desktop e large desktop in quanto i tag sociali vengono spostati infondo
alla pagina rischiando di sormontare altri elementi

--- a/business.html
+++ b/business.html
@@ -89,7 +89,7 @@
                     <p id="descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. </p>
                 </div>
                 <!-- /.ROW -->
-
+                <div class="hidden-md hidden-lg"><hr></div>
                 <!-- ===== TAG SOCIALI  =====-->
                 <div class="col-md-3 hidden-xs" id="tags">
                     <div class="panel panel-default">
