--- a/contatti.html
+++ b/contatti.html
@@ -128,7 +128,7 @@
                         <input type="submit" name="submit" id="submit" value="Invia" class="btn btn-info pull-right">
                     </form>
                 </div>
-
+                <div class="hidden-md hidden-lg"><br><br><hr></div>
                 <!-- ===== TAG SOCIALI  =====-->
                 <div class="col-md-3">
                     <address>
