--- a/recensioni.html
+++ b/recensioni.html
@@ -115,7 +115,29 @@
                     </div>
 
                 </div>
+                <div class="hidden-md hidden-lg"><hr></div>
+                <!-- ===== TAG SOCIALI  =====-->
+                <div class="col-md-3 hidden-xs" id="tags">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title" id="descrizione">TAGS</h3>
+                        </div>
+                        <div class="panel-body">
+                            <h1>Stati Uniti</h1>
+                            <h4>Francia</h4>
+                            <h2> Italia</h2>
+                            <h1>Asia</h1>
+                            <h2>Giappone</h2>
+                            <h5>Africa</h5>
+                            <h3> Dubai</h3>
+                            <h2>Las Vegas</h2>
+                            <h1> New York</h1>
+                            <h3>Coast-to-Coast</h3>
+                            <h2>Hawaii</h2>
+                            <h5>Cina</h5> </div>
+                    </div>
 
+                </div>
             </div>
         </div>
 
