--- a/upload.html
+++ b/upload.html
@@ -39,7 +39,9 @@
             <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
         </div>
     </div>
-    <input type="file" name="upload[file]" class="btn btn-default">
-    <br>
+    <div class="form-group">
+        <input type="file" name="upload[file]" class="btn btn-default">
+        <br>
     <input type="submit" name="submit" id="submit" value="Carica il tuo CV ed invia!" class="btn btn-info pull-right">
+    </div>
 </form>
