--- a/lavori_stagionali.html
+++ b/lavori_stagionali.html
@@ -101,7 +101,7 @@
                     <div id="upload"></div>
                 </div>
                 <!-- /.COL-MD-6 -->
-
+                <div class="hidden-md hidden-lg"><br><hr></div>
                 <!-- ===== TAG SOCIALI  =====-->
                 <div class="col-md-3 hidden-xs" id="tags">
                     <div class="panel panel-default">
