--- a/viaggi/africa.html
+++ b/viaggi/africa.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <!-- /.ROW -->
-
+                <div class="hidden-md hidden-lg"><hr></div>
                 <!-- ===== TAG SOCIALI  =====-->
                 <div class="col-md-3 hidden-xs" id="tags">
                     <div class="panel panel-default">
