--- a/viaggi/europa/berlino.html
+++ b/viaggi/europa/berlino.html
@@ -123,7 +123,7 @@
                         <p><a class="btn btn-default" href="/viaggi/acquisto-viaggio.html" role="button">Acquista il tuo viaggio</a></p>
                 </div>
                 <!-- /.ROW -->
-
+                <div class="hidden-md hidden-lg"><hr></div>
                 <!-- ===== TAG SOCIALI  =====-->
                 <div class="col-md-3 hidden-xs" id="tags">
                     <div class="panel panel-default">
