--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
             <!-- Logo e nome del sito  -->
 
             <div id="logo">
-                <img src="/favicon.png" class="hidden-xs" height="45" width="45" />
+                <a href="/index.html"><img src="/favicon.png" class="hidden-xs" height="45" width="45"></a>
                 <a class="navbar-brand" href="/index.html">Glas Travels</a>
             </div>
         </div>
