Booking form index
Appaiono selezionate le caselle già preimpostate per Parigi

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
 
     <!-- Date Picker -->
     <script src="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-    
-    <script type="text/javascript">function showMe (it, box) { 
-    var vis = (box.checked) ? "block" : "none"; 
-    document.getElementById(it).style.display = vis;
-    }</script>
+
+    <script type="text/javascript">
+        function showMe(it, box) {
+            var vis = (box.checked) ? "block" : "none";
+            document.getElementById(it).style.display = vis;
+        }
+    </script>
 
 </head>
 
@@ -115,7 +117,9 @@
                         <fieldset>
                             <!-- Form Name -->
                             <div class="col-md-12">
-                            <div align="center"><legend id="prenotazione">PRENOTA AL VOLO IL TUO VIAGGIO!</legend></div>
+                                <div align="center">
+                                    <legend id="prenotazione">PRENOTA AL VOLO IL TUO VIAGGIO!</legend>
+                                </div>
                             </div>
 
                             <!-- Seleziona viaggio -->
