--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
                 </ul>
             </div>
 
-            <!-- DATE PICKER -->
-
             <div class="container marketing">
+
+                <!-- DATE PICKER -->
+
                 <div class="row" id="bookingform">
                     <form>
                         <fieldset>
@@ -296,14 +297,21 @@
                 </div>
             </div>
 
-            <!-- RECENSIONE + AZIENDA -->
+            <!-- TESTIMONIALS + AZIENDA -->
 
             <br>
             <div class="container featurette">
 
                 <hr class="featurette-divider">
                 <br>
-                <div class="row featurette">
+
+                <!-- TESTIMONIALS -->
+
+                <div class="row feauturette">
+                    <div id="testimonials"></div>
+                </div>
+
+                <div class="row featurette visible-xs">
                     <div class="col-sm-7">
                         <h4 class="featurette-heading"><em>Che cosa dicono di noi. </em><span class="text-muted">Wired Magazine</span></h4>
                         <p class="lead">Chi gestisce il sito è molto efficiente. In due giorni, il viaggio dei propri sogni è bello che prenotato. <em>Glas Travels</em> scalerà sicuramente le classifiche per il miglior TOP TRAVEL SITE.
@@ -359,6 +367,9 @@
 
     <script>
         $("#navbar").load("navbar.html");
+    </script>
+    <script>
+        $("#testimonials").load("testimonials.html");
     </script>
     <script>
         $("#footer").load("footer.html");
